# humble-ledger

./: .gitignore  Cargo.toml  Makefile  README.md  run.sh
src/: acquiring_taste.rs  album.rs  album_club.rs  bandcamp.rs  complete.rs  db.rs  forms.rs  lp.rs  lp_info.rs  main.rs  playlist.rs  spotify.rs  spotify_activity.rs  youtube.rs
