[package]
name = "humble_ledger"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.64"
serenity-command-derive = { git = "https://github.com/etwyniel/discord_framework" }
serenity-command-handler = { git = "https://github.com/etwyniel/discord_framework" }
serenity-command = { git = "https://github.com/etwyniel/discord_framework" }
chrono = "0.4.22"
futures = "0.3.29"
futures-util = "0.3.29"
rspotify = "0.15"
reqwest = "0.11.12"
scraper = "0.13.0"
rusqlite = "0.37"
fallible-iterator = "0.3.0"
regex = "1.6.0"
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"
itertools = "0.12"
urlencoding = "2.1.2"
oorandom = "11.1.3"
rand = "0.8.5"
once_cell = "1.19.0"
